# max_snr_portfolio

./: README.md  pyproject.toml  requirements.txt
data/: price_df.csv  results_df.csv
python/: evaluate_weights.py  max_snr_portfolio_analysis.ipynb  optimal_weights.py
