[tool.poetry]
name = "max-snr-portfolio"
version = "0.1.0"
description = "Supplementary material to the following article: <TODO: DOI>"
authors = ["Adam Zlatniczki <adam.zlatniczki@cs.bme.hu>"]
readme = "README.md"
license = "GPL-3.0-only"


[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
cvxopt = "^1.3.2"
pandas = "^2.1.4"
statsmodels = "^0.14.1"
tqdm = "^4.66.1"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.33"
streamlit = "^1.29.0"
multiprocess = "^0.70.15"
seaborn = "^0.13.0"
ipykernel = "^6.28.0"
hurst = "^0.0.5"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
